--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^7.9.2",
     "react-slick": "^0.31.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.4.1",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.1.13"
   },
